Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.5.2 (unreleased) [beta]

* Version 1.5.1 (released 2010-04-21) [beta]

** Update gnulib files.

* Version 1.5.0 (released 2010-03-31) [beta]

** doc: Explain GS2-related changes.

** doc: GTK-DOC manual improved.
Now almost all symbols and types are explained.

** gsasl: Fix crash when getaddrinfo does not get a canonical name.

** gsasl: Improve error message when server rejects authentication.

** tests: Self checks are improved.

* Version 1.4.4 (released 2010-03-25) [stable]

** See lib/NEWS.

* Version 1.4.3 (released 2010-03-25) [stable]

** See lib/NEWS.

* Version 1.4.2 (released 2010-03-15) [stable]

** i18n: Updated translations.

* Version 1.4.1 (released 2010-02-16) [stable]

** gsasl: Improve application data throughput.
Patch from Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de> in
<http://thread.gmane.org/gmane.comp.gnu.gsasl.general/256>.

** Improve MinGW builds.

** i18n: Updated German translation.

* Version 1.4.0 (released 2009-11-17) [stable]

** No changes since 1.3.91 release candidate.
The release numbering scheme has changed compared to the last stable
release.  In the future we will use version numbers X.Y.Z with even Y
to indicate stable releases and odd Y to indicate experimental
releases.  Z is incremented by one for every release on a particular
branch.  For example, the next stable release will either be 1.4.1 or
1.6.0 and the next experimental release will be 1.5.0.  The intention
is that the stable branches can be used for security bug fixes if/when
there is a need.  Other changes or new features will (typically) not
be back-ported to a stable branch but instead will have to wait for