@@ -59,7 +59,7 @@
     (%%TEXI_TGZ_SIZE%%K bytes gzipped tar file).</a></li>
 </ul>
 
-<p>The manual is also available in a few experimental formats:</p>
+<p>There is also an API reference manual:</p>
 
 <ul>
   <li><a href="../doxygen/">Doxygen HTML</a>.</li>
@@ -68,6 +68,7 @@
 
 <ul>
   <li><a href="../reference/">HTML API Reference Manual (GTK-DOC)</a>.</li>
+  <li><a href="../reference/%%PACKAGE%%.pdf">PDF Reference API Manual (GTK-DOC)</a>.
   <li><a href="../reference/gsasl.devhelp">DevHelp API Reference Manual (GTK-DOC)</a>.</li>
 </ul>
 
