@@ -8,6 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.5.2 (unreleased) [beta]
 
+** doc: Added PDF version of API reference manual.
+See doc/reference/gsasl.pdf.
+
 * Version 1.5.1 (released 2010-04-21) [beta]
 
 ** Update gnulib files.
